# repo

./: .dev.vars.example  .gitignore  .grippy.yaml  .license-header.txt  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  DEBT.md  LICENSE  README.md  action.yml  cliff.toml  grippy-q4-raw-output.txt  nboot-spec.json  pyproject.toml
.comms/: thread-archive-sessions-1-8.md  thread.md
.github/: PULL_REQUEST_TEMPLATE.md  quality-gate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: security.instructions.md  workflows.instructions.md
.github/workflows/: _build-reusable.yml  codeql.yml  grippy-review.yml  release.yml  scorecard.yml  tests.yml
docs/: alpha-boot-prompt.md  arctl-upgrade-playbook.md  bravo-boot-prompt.md
grippy-action/: action.yml  example-workflow.yml
schema/: manifest-schema.yaml  spec-schema.json
src/grippy/: agent.py  (+12 more)
tests/: conftest.py  test_audit_bravo.py  test_base_pack.py  test_cli.py  test_cli_diff.py  test_dest_sandbox.py  test_dest_sanitize.py  test_diff.py  test_diff_audit.py  test_engine.py  test_engine_audit.py  test_grippy_agent.py  test_grippy_agent_evolution.py  test_grippy_codebase.py  test_grippy_embedder.py  test_grippy_github_review.py  test_grippy_graph.py  test_grippy_persistence.py  test_grippy_prompts.py  test_grippy_retry.py  test_grippy_review.py  test_grippy_schema.py  test_h2_name_safety.py  test_hooks.py  test_init.py  test_integration.py  test_manifest.py  test_resolve.py  test_secrets_baseline.py  test_spec.py  test_trust.py  test_validate.py
(+87 files in other folders)
